client/src/App.css
#root {
  /* max-width: 1280px;
  margin: 0 auto;
  padding: 2rem;
  text-align: center; */
}

body {
  width: 100vw;
  display: block;
  font-family: "Abel";
  color: #201f1f;
}

/* Fonts - CSS */
.text-title-42 {
  font-family: "Bungee";
  font-size: 42px;
}
.text-title-40 {
  font-family: "Bungee";
  font-size: 40px;
}
.text-title-38 {
  font-family: "Bungee";
  font-size: 38px;
}
.text-title-36 {
  font-family: "Bungee";
  font-size: 36px;
}
.text-title-34 {
  font-family: "Bungee";
  font-size: 34px;
}
.text-title-32 {
  font-family: "Bungee";
  font-size: 32px;
}
.text-title-30 {
  font-family: "Bungee";
  font-size: 30px;
}
.text-title-28 {
  font-family: "Bungee";
  font-size: 28px;
}
.text-title-26 {
  font-family: "Bungee";
  font-size: 26px;
}
.text-title-24 {
  font-family: "Bungee";
  font-size: 24px;
}
.text-title-22 {
  font-family: "Bungee";
  font-size: 22px;
}
.text-title-20 {
  font-family: "Bungee";
  font-size: 20px;
}
.text-title-18 {
  font-family: "Bungee";
  font-size: 18px;
}
.text-title-16 {
  font-family: "Bungee";
  font-size: 16px;
}
.text-title-14 {
  font-family: "Bungee";
  font-size: 14px;
}
.text-title-12 {
  font-family: "Bungee";
  font-size: 12px;
}
.text-title-10 {
  font-family: "Bungee";
  font-size: 10px;
}
.text-title-8 {
  font-family: "Bungee";
  font-size: 8px;
}
.text-body-32 {
  font-family: "Abel";
  font-size: 32px;
}
.text-body-30 {
  font-family: "Abel";
  font-size: 30px;
}
.text-body-28 {
  font-family: "Abel";
  font-size: 28px;
}
.text-body-26 {
  font-family: "Abel";
  font-size: 26px;
}
.text-body-24 {
  font-family: "Abel";
  font-size: 24px;
}
.text-body-22 {
  font-family: "Abel";
  font-size: 22px;
}
.text-body-20 {
  font-family: "Abel";
  font-size: 20px;
}
.text-body-18 {
  font-family: "Abel";
  font-size: 18px;
}
.text-body-16 {
  font-family: "Abel";
  font-size: 16px;
}
.text-body-14 {
  font-family: "Abel";
  font-size: 14px;
}
.text-body-12 {
  font-family: "Abel";
  font-size: 12px;
}
.text-body-10 {
  font-family: "Abel";
  font-size: 10px;
}
.text-body-8 {
  font-family: "Abel";
  font-size: 8px;
}

/* Text Effects */
.text-underline {
	text-decoration: underline;
}
.text-italic {
	font-style: italic;
}
.align-right {
	text-align: right;
}
.align-left {
	text-align: left;
}
.align-center {
	text-align: center;
}

/* Spacing */
.spacing-5 {
	margin-bottom: 5px;
}
.spacing-10 {
	margin-bottom: 10px;
}


/* Header */
.header-primary {
	display: flex;
	flex-direction: row;
	justify-content: space-between;
	align-items: center;

  font-size: 30px;

	margin: 20px 30px 20px 20px;
}
.header-app-logo {
	text-decoration: none;
  color: #201f1f;
}
.userbar-button {
  width: 30px;
  height: 30px;

  display: flex;
	flex-direction: row;
	justify-content: space-between;
	align-items: center;
  text-align: center;
}
.userbar-img-placeholder {
  background-color: #201f1f;
  width: 50px;
  height: 50px;
  border-radius: 50%;

  z-index: 150;
  position: fixed;
  right: 21px;
}
.userbar-icon-placeholder {
  z-index: 160;
  position: fixed;
  color: white;
}

.header-search {
	display: flex;
	justify-content: center;
	align-items: center;
	width: 100%;
}

/* Nav Sidebar */
.navbar {
  position: fixed;
  top: 0;
  left: 0;
  bottom: 0;
  overflow-x: hidden;
  z-index: 1000;
  background-image: linear-gradient(135deg, #4471eb, #449aeb, #44d5eb, #44ebab);
  /* background-size: cover;
  background-repeat: no-repeat; */
  /* background-position: 0%; */

  color: white;

  width: 80%;
  display: flex;
  flex-direction: column;
  

}
.navbar-header{
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  align-items: top;

  font-size: 30px;

  margin: 20px 20px 20px 30px;
}
.navbar-header-placeholder {
  opacity: 0;
}
.navbar-links {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;

  text-align: left;

}
.navbar-links-owned, .navbar-links-all {
  margin-top: 10%;
}
.navbar-links-all-links, .navbar-links-owned-links {
  margin-left: 10%;
}
.text-links-navbar-all, .text-links-navbar-owned {
  text-decoration: none;
  color: white;

  margin-top: 5px;
}

/* User Sidebar */
.userbar {
  position: fixed;
  top: 0;
  right: 0;
  bottom: 0;
  overflow-x: hidden;
  z-index: 900;
  background: linear-gradient(135deg, #44d5eb, #44ebab, #44eb87, #44eb52);

  color: white;

  width: 80%;
  display: flex;
  flex-direction: column;
}
.userbar-header {
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  align-items: top;

  font-size: 30px;

  margin: 20px 30px 0px 30px;
}
.userbar-button-settings {
  color: white;
}
.userbar-account-container {
  margin-top: 15vh;
}
.login-form-container {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
}
.login-form {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
}
.login-form-title {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;

  margin-bottom: 25px;
}
.login-form-title-body {
  font-weight: bold;
  margin-bottom: -15px;
}
.login-form-fields {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
}
.login-input-field {
  margin-bottom: 10px;
  width: 200px;
  font-family: "Abel";
  font-size: 16px;
}
.login-button-container {
  margin-top: 5px;
}
.login-error {

}
.login-button-submit {
  font-size: 18px;
}
.login-signup-link {
  margin-top: 25px;
  color: black;
}
.sidebar-account-view {
  display: flex;
  flex-direction: column;
  align-items: center;
}
.sidebar-account-user-img-container {
  display: flex;
  flex-direction: column;
  justify-content: top;
  align-items: center;

  width: 200px;
  height: 200px;
  border-radius: 50%;
  overflow: hidden;

  margin-top: -80px;
  margin-bottom: 10px;
}
.sidebar-account-user-img {
  
}
.sidebar-account-stats {
  display: flex;
  flex-direction: row;
  justify-content: top;
  align-items: center;
}
.sidebar-owned-stat-set {
  display: flex;
  flex-direction: column;
  justify-content: top;
  align-items: center;

  margin: 0px 10px 0px 10px;
}
.sidebar-owned-stat-number {
  margin-top: 10px;
  margin-bottom: -8px;
}

